cabal-version:      3.4
name:               hsbuild
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A small build system written in haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/Annwan/hsbuild/issues

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Annwan
maintainer:         antoine.combet@etu.univ-lyon1.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, example.hsbuild

executable hsbuild
    main-is:          Main.hs
    other-modules:    Lang.Expr

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      process,
                      containers,
                      strict-list,
                      ghc-lib-parser
    hs-source-dirs:   src
    default-language: Haskell2010
